initiaite expense-tracker app

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -30,4 +32,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
